- Bumped version to v0.1.5.14.1919810 for the memes - Made BungeeCord IP forwarding a carpet rule - no more VanillaCord patching - I modified build.gradle to use a Chinese mirror site for Maven central. If you live outside China, make sure to change it back on your device. > I mean it's just me developing a 1.12 carpet branch anyway...

--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,9 @@ buildscript
 {
 	repositories
 	{
-		mavenCentral()
+        // Maven mirror for quicker access in China
+//  	mavenCentral()
+        maven {url "https://maven.aliyun.com/repository/public"}
 		maven {url 'https://masa.dy.fi/maven/'}
 		maven {url 'https://files.minecraftforge.net/maven'}
 		maven {url 'https://plugins.gradle.org/m2/'}
