--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -10,4 +10,4 @@ jobs:
   build:
     uses: ./.github/workflows/build-base.yaml
     with:
-      tag: ci-${{ github.sha }}
+      tag: ${{ github.sha }}-dev
